# galgorithm

./: README.md  meson.build
galgorithm/: galgorithm-binary-search.c  galgorithm-binary-search.h  galgorithm-merge-sort.c  galgorithm-merge-sort.h  galgorithm-minheap.c  galgorithm-minheap.h  galgorithm-quicksort.c  galgorithm.h  meson.build
tests/: meson.build
tests/galgorithm/: galgorithm-binary-search-test.cpp  galgorithm-merge-sort-test.cpp  galgorithm-minheap-test.cpp  galgorithm-quicksort-test.cpp  meson.build
